<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_edittask"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Task"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="150dp"
            />

        <TextView
            android:id="@+id/edittask_close"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:layout_gravity="end"
            android:background="@drawable/background_btn2"
            android:gravity="end"
            android:onClick="close"
            android:text="Cancel"

            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittask_taskname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Task Name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edittask_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Description"
            android:inputType="text"
            android:maxLines="3"
            android:minLines="3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"
            android:hint="Select Color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioGroup
            android:id="@+id/edittask_color_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_marginTop="0dp"

            android:orientation="horizontal">

            <RadioButton

                android:id="@+id/edittask_red"
                android:layout_width="17dp"
                android:layout_height="20dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/button_red"
                android:button="@null"
                android:checked="false"
                android:tag="red" />

            <RadioButton
                android:id="@+id/edittask_blue"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_blue"
                android:button="@null"
                android:checked="false"
                android:tag="blue" />

            <RadioButton

                android:id="@+id/edittask_purple"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_purple"
                android:button="@null"
                android:checked="false"
                android:tag="purple" />

            <RadioButton

                android:id="@+id/edittask_yellow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_yellow"
                android:button="@null"
                android:checked="false"
                android:tag="yellow" />

            <RadioButton

                android:id="@+id/edittask_green"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_green"
                android:button="@null"
                android:checked="false"
                android:tag="green" />
        </RadioGroup>

        <TextView
            android:id="@+id/edittask_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="Choose Date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edittask_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="Choose Time"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="Choose Frequency"
            android:textSize="18sp" />

        <Spinner

            android:id="@+id/edittask_frequency"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:entries="@array/frequency"
            android:prompt="@string/frequency_prompt" />
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:id="@+id/edittask_editBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"

            android:onClick="Edit"
            android:text="Edit"
            android:textColor="@color/white"
            android:background="@drawable/background_btn_blue_rounded"
            android:drawableLeft="@drawable/ic_baseline_edit_24px"
            android:textSize="18sp" />

        <Button
            android:id="@+id/task_deleteBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:baselineAligned="false"
            android:layout_marginStart="20dp"
            android:text="Delete"
            android:textColor="@color/white"
            android:background="@drawable/background_btn_red_rounded"
            android:drawableLeft="@drawable/ic_sharp_delete_outline_24px"
            android:onClick="Delete"
            android:textSize="18sp" />

        <Button
            android:id="@+id/edittask_finishBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:text="Finish"
            android:drawableLeft="@drawable/ic_baseline_done_24px"
            android:background="@drawable/background_btn_white_rounded"
            android:onClick="Finish"
            android:textSize="18sp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/edittask_errormsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_primary" />


    </LinearLayout>




    </LinearLayout>

