<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    android:background="@drawable/background_4"
    android:id = "@+id/layout_main">
    <!--android:background="@drawable/background_anim"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:src="@drawable/logo_black"
                android:padding="4dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:drawableLeft="@drawable/ic_person_outline_white_400_24dp"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:textColorHint="#e2e2e2" />
                <TextView
                    android:id="@+id/login_errorMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="165dp"
                    android:layout_marginTop="0dp"
                    android:layout_gravity="right"
                    android:textColorHint="#ff0202"
                    android:textColor="#ff0202" />
            </RelativeLayout>


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_lock_white_400_24dp"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:textColorHint="#e2e2e2" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Sign in"
                android:onClick="SignIn"
                android:textColor="#4a5a68"
                android:padding="16dp"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAllCaps="false"
                android:background="@drawable/background_btn2"/>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Sign Up"
                android:onClick="SignUp"
                android:textColor="#4a5a68"
                android:padding="16dp"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:textAllCaps="false"
                android:background="@drawable/background_btn2"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Forget Password?"
                android:clickable="true"
                android:textColor="#efe7e7"
                android:padding="0dp"
                android:textSize="18sp"
                android:onClick="ForgetPassword"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:textAllCaps="false"
                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
